Bump org.gaul:modernizer-maven-plugin from 3.3.0 to 3.4.0 in /java (#281)
* Bump org.gaul:modernizer-maven-plugin from 3.3.0 to 3.4.0 in /java

Bumps [org.gaul:modernizer-maven-plugin](https://github.com/gaul/modernizer-maven-plugin) from 3.3.0 to 3.4.0.
- [Release notes](https://github.com/gaul/modernizer-maven-plugin/releases)
- [Commits](https://github.com/gaul/modernizer-maven-plugin/compare/modernizer-maven-plugin-3.3.0...modernizer-maven-plugin-3.4.0)

---
updated-dependencies:
- dependency-name: org.gaul:modernizer-maven-plugin
  dependency-version: 3.4.0
  dependency-type: direct:development
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* Fixing after modernizer update

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Francesco Chicchiriccò <ilgrosso@apache.org>